<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.Guideline
        android:id="@+id/calc_guideline_half"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constrainedWidth="true"
        app:layout_constraintGuide_percent="0.5"/>

    <Button
        android:id="@+id/btn_show_dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/show_dialog"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/calc_guideline_half"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <CheckBox
        android:id="@+id/checkbox_disable_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:checked="false"
        android:text="@string/disable_title"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/btn_show_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/calc_guideline_half"
        app:layout_constraintTop_toTopOf="@+id/btn_show_dialog"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_max="@+id/calc_guideline_half"/>

    <CheckBox
        android:id="@+id/checkbox_enable_options"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:checked="false"
        android:text="@string/enable_options"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/calc_guideline_half"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_show_dialog"
        app:layout_constraintWidth_max="@+id/calc_guideline_half"/>

    <CheckBox
        android:id="@+id/checkbox_title_follow_dir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:checked="false"
        android:text="@string/follow_dir"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox_enable_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/calc_guideline_half"
        app:layout_constraintTop_toTopOf="@+id/checkbox_enable_options"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintWidth_max="@+id/calc_guideline_half"/>

    <CheckBox
        android:id="@+id/checkbox_enable_multiple"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:checked="false"
        android:text="@string/select_multiple"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/calc_guideline_half"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_enable_options"
        app:layout_constraintWidth_max="@+id/calc_guideline_half"/>

    <CheckBox
        android:id="@+id/checkbox_display_path"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:checked="false"
        android:text="@string/display_path"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox_enable_multiple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/calc_guideline_half"
        app:layout_constraintTop_toTopOf="@+id/checkbox_enable_multiple"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_max="@+id/calc_guideline_half"/>

    <CheckBox
        android:id="@+id/checkbox_dir_only"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:checked="false"
        android:text="@string/dir_only"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/calc_guideline_half"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_enable_multiple"
        app:layout_constraintWidth_max="@+id/calc_guideline_half"/>

    <CheckBox
        android:id="@+id/checkbox_allow_hidden"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:checked="false"
        android:text="@string/allow_hidden"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox_dir_only"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/calc_guideline_half"
        app:layout_constraintTop_toTopOf="@+id/checkbox_dir_only"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_max="@+id/calc_guideline_half"/>

    <CheckBox
        android:id="@+id/checkbox_continue_from_last"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:checked="false"
        android:text="@string/continue_from_last"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/calc_guideline_half"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_dir_only"
        app:layout_constraintWidth_max="@+id/calc_guideline_half"/>

    <CheckBox
        android:id="@+id/checkbox_filter_images"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:checked="false"
        android:text="@string/filter_images"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox_continue_from_last"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/calc_guideline_half"
        app:layout_constraintTop_toTopOf="@+id/checkbox_continue_from_last"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_max="@+id/calc_guideline_half"/>

    <CheckBox
        android:id="@+id/checkbox_display_icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:checked="false"
        android:text="@string/display_icon"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/calc_guideline_half"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_continue_from_last"
        app:layout_constraintWidth_max="@+id/calc_guideline_half"/>

    <CheckBox
        android:id="@+id/checkbox_date_format"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:checked="false"
        android:text="@string/display_long_dates"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox_display_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/calc_guideline_half"
        app:layout_constraintTop_toTopOf="@+id/checkbox_display_icon"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_max="@+id/calc_guideline_half"/>

    <CheckBox
        android:id="@+id/checkbox_dark_theme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:checked="false"
        android:text="@string/dark_theme"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/calc_guideline_half"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_display_icon"
        app:layout_constraintWidth_max="@+id/calc_guideline_half"/>

    <CheckBox
        android:id="@+id/checkbox_custom_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:checked="false"
        android:text="@string/custom_layout"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox_dark_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/calc_guideline_half"
        app:layout_constraintTop_toTopOf="@+id/checkbox_dark_theme"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_max="@+id/calc_guideline_half"/>

    <CheckBox
        android:id="@+id/checkbox_dpad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:checked="false"
        android:text="@string/dpad"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/calc_guideline_half"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_dark_theme"
        app:layout_constraintWidth_max="@+id/calc_guideline_half"/>

    <CheckBox
        android:id="@+id/checkbox_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:checked="false"
        android:text="@string/back"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox_dpad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/calc_guideline_half"
        app:layout_constraintTop_toTopOf="@+id/checkbox_dpad"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_max="@+id/calc_guideline_half"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/hello_world"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_dpad"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="ContentDescription"/>

</android.support.constraint.ConstraintLayout>
